deploy/prod/mms-greeting-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mms-greetings
  namespace: mms-apps-prod
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mms-greetings
  template:
    metadata:
      labels:
        app: mms-greetings
    spec:
      volumes:
      - name: secret-volume
        secret:
          secretName: mms-greetings      
      containers:
        - name: app
          image: gcr.io/PROJECT_ID/IMAGE:TAG
          volumeMounts:
          - name: secret-volume
            readOnly: true
            mountPath: "/etc/secret-volume/mms"          
          imagePullPolicy: Always
