deploy/prod/mms-greeting-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mms-ingress
  namespace: mms-apps-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ip-mms-p-gl-01
    networking.gke.io/managed-certificates: mms-sec-greeting-prod
    kubernetes.io/ingress.class: "gce"
spec:
  rules:
  - host: "sec-greeting-prod.inf-gcp-external-demo.com"
    http:
      paths:
      - backend:
          service:
            name: mms-greetings
            port:
              number: 80
        pathType: ImplementationSpecific
