deploy/prod/mms-greetings-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mms-ingress
  namespace: mms-apps-prod
  annotations:
    kubernetes.io/ingress.global-static-ip-name: ip-mms-global-01
    networking.gke.io/managed-certificates: mms-sec-greeting
    kubernetes.io/ingress.class: "gce"
spec:
  defaultBackend:
    service:
      name: mms-greetings
      port:
        number: 80
